# anyrun

./: Cargo.toml  README.md  default.nix  flake.nix
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  build.yml  cachix.yml  cargo-audit.yml  cargo-build.yml  cargo-update.yml  check.yml  nix-build.yml  nix-cache.yml  nix.yml  rust.yml  update.yml
anyrun/: Cargo.toml
anyrun-interface/: Cargo.toml
anyrun-interface/src/: lib.rs
anyrun-macros/: Cargo.toml
anyrun-macros/src/: lib.rs
anyrun-plugin/: Cargo.toml
anyrun-plugin-macros/: Cargo.toml
anyrun-plugin-macros/src/: lib.rs
anyrun-plugin/src/: lib.rs
anyrun/res/: style.css
anyrun/src/: app.rs  config.rs  main.rs  plugin_box.rs  provider.rs  socket.rs
examples/: applications.ron  config.ron
nix/: default.nix  hm-module.nix  lib.nix  overlay.nix
nix/modules/: hjem.nix  home-manager.nix  options.nix
nix/plugins/: default.nix
plugins/applications/: Cargo.toml  README.md
plugins/applications/src/: execution_stats.rs  history.rs  lib.rs  scrubber.rs
plugins/dictionary/: Cargo.toml  README.md
plugins/dictionary/src/: lib.rs
plugins/hyprlandwindows/: Cargo.toml  README.md
plugins/hyprlandwindows/src/: lib.rs
plugins/input/: .gitignore  Cargo.toml  README.md
plugins/input/src/: lib.rs
plugins/kidex/: Cargo.toml  README.md
plugins/kidex/src/: lib.rs
plugins/niri-focus/: Cargo.toml  README.md
plugins/niri-focus/src/: lib.rs
plugins/nix/: Cargo.toml  README.md
plugins/nix-run/: Cargo.toml  README.md
plugins/nix-run/src/: lib.rs
plugins/nix/src/: lib.rs
plugins/powermenu/: Cargo.toml  README.md
plugins/powermenu/src/: actions.rs  config.rs  lib.rs
plugins/randr/: Cargo.toml  README.md
plugins/randr/src/: lib.rs  randr.rs  wlr_randr.rs
plugins/randr/src/randr/: dummy.rs  hyprland.rs  mod.rs
plugins/rink/: Cargo.toml  README.md
plugins/rink/src/: lib.rs
plugins/shell/: Cargo.toml  README.md
plugins/shell/src/: lib.rs
plugins/stdin/: Cargo.toml  README.md
plugins/stdin/src/: lib.rs
plugins/symbols/: Cargo.toml  README.md  build.rs
plugins/symbols/src/: lib.rs
plugins/translate/: Cargo.toml  README.md
plugins/translate/src/: lib.rs
plugins/userdirs/: Cargo.toml
plugins/userdirs/src/: lib.rs
plugins/web-search/: Cargo.toml
plugins/web-search/src/: lib.rs
plugins/websearch/: Cargo.toml  README.md
plugins/websearch/src/: lib.rs
src/: main.rs
