[workspace]
members = [
  "anyrun",
  "anyrun-plugin",
  "anyrun-macros",
  "anyrun-interface",
  "plugins/applications",
  "plugins/dictionary",
  "plugins/hyprlandwindows",
  "plugins/kidex",
  "plugins/randr",
  "plugins/rink",
  "plugins/shell",
  "plugins/stdin",
  "plugins/symbols",
  "plugins/translate",
  "plugins/websearch",
]
