[workspace]
resolver = "2"
members = [
  "anyrun",
  "anyrun-plugin",
  "anyrun-macros",
  "anyrun-interface",
  "plugins/applications",
  "plugins/symbols",
  "plugins/rink",
  "plugins/shell",
  "plugins/kidex",
  "plugins/powermenu",
  "plugins/translate",
  "plugins/randr",
  "plugins/stdin",
  "plugins/dictionary",
  "plugins/websearch",
]
