[workspace]
members = [
  "anyrun",
  "anyrun-plugin",
  "anyrun-macros",
  "plugins/applications",
  "plugins/symbols",
  "plugins/rink",
  "plugins/shell",
  "plugins/kidex",
  "plugins/translate",
  "plugins/randr",
  "plugins/stdin",
  "plugins/dictionary",
  "plugins/websearch",
  "plugins/nix-run",
  "plugins/niri-focus",
]
resolver = "2"
