[package]
name = "anyrun-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-interface = { path = "../anyrun-interface" }
anyrun-macros = { path = "../anyrun-macros" }
