[package]
name = "anyrun"
version = "25.9.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-macros = { path = "../anyrun-macros" }
abi_stable = "0.11.1"
ron = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
anyrun-interface = { git = "https://github.com/anyrun-org/anyrun-interface" }
anyrun-provider-ipc = { git = "https://github.com/anyrun-org/anyrun-provider" }
clap = { version = "4.2.7", features = ["derive"] }
relm4 = { git = "https://github.com/Kirottu/Relm4", branch = "service" }
gtk4-layer-shell = "0.6.3"
gtk4 = "0.10.0"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "net", "macros"] }
tree_magic_mini = "3.2.0"
