[package]
name    = "anyrun"
version = "25.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable          = "0.11.1"
anyrun-interface    = { git = "https://github.com/anyrun-org/anyrun-interface" }
anyrun-macros       = { path = "../anyrun-macros" }
anyrun-provider-ipc = { git = "https://github.com/anyrun-org/anyrun-provider" }

clap             = { features = [ "derive" ], version = "4.2.7" }
gtk4             = { features = [ "v4_12" ], version = "0.10.2" }
gtk4-layer-shell = "0.6.3"
relm4            = { branch = "service", git = "https://github.com/anyrun-org/Relm4" }
ron              = "0.8.0"
serde            = { features = [ "derive" ], version = "1.0.228" }
serde_json       = "1.0.143"
tokio            = { features = [ "sync", "rt-multi-thread", "net", "macros" ], version = "1.48.0" }
tree_magic_mini  = "3.2.0"
