[package]
name    = "applications"
version = "25.12.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable    = "0.11.1"
anyrun-plugin = { path = "../../anyrun-plugin" }
fuzzy-matcher = "0.3.7"
ron           = "0.8.0"
serde         = { features = [ "derive" ], version = "1.0.228" }
shell-words = "1.1.1"
sublime_fuzzy = "0.7.0"
