[package]
name    = "dictionary"
version = "25.9.3"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = { path = "../../anyrun-plugin" }
reqwest = { default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
], version = "0.11.16" }
ron = "0.8.0"
serde = { features = [ "derive" ], version = "1.0.228" }
