[package]
name    = "kidex"
version = "25.12.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable    = "0.11.1"
anyrun-plugin = { path = "../../anyrun-plugin" }
fuzzy-matcher = "0.3.7"
kidex-common  = { features = [ "util" ], version = "0.1.0" }
open          = "3.2.0"
ron           = "0.10.1"
serde         = { features = [ "derive" ], version = "1.0.228" }
