[package]
name = "niri-focus"
version = "25.9.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
niri-ipc = "25.5.1"
fuzzy-matcher = "0.3.7"
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11.1"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
freedesktop-desktop-entry = "0.7.14"
