[package]
name    = "niri-focus"
version = "25.12.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
abi_stable                = "0.11.1"
anyrun-plugin             = { path = "../../anyrun-plugin" }
freedesktop-desktop-entry = "0.7.19"
fuzzy-matcher             = "0.3.7"
niri-ipc                  = "25.5.1"
ron                       = "0.10.1"
serde                     = { features = [ "derive" ], version = "1.0.228" }
