[package]
name = "nix-run"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11.1"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "brotli", "json", "rustls-tls"] }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
fuzzy-matcher = "0.3.7"
