[package]
name    = "nix-run"
version = "25.9.3"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = { path = "../../anyrun-plugin" }
fuzzy-matcher = "0.3.7"
reqwest = { default-features = false, features = [
  "blocking",
  "brotli",
  "json",
  "rustls-tls",
], version = "0.12.23" }
ron = "0.10.1"
serde = { features = [ "derive" ], version = "1.0.228" }
serde_json = "1.0.142"
