[package]
name = "randr"
version = "25.9.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11.1"
hyprland = "0.4.0-beta.1"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
