[package]
name = "translate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
fuzzy-matcher = "0.3.7"
tokio = { version = "1.24.2", features = ["rt"] }
futures = "0.3.25"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
ron = "0.8.0"
