[package]
name    = "translate"
version = "25.12.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = { path = "../../anyrun-plugin" }
futures = "0.3.25"
fuzzy-matcher = "0.3.7"
reqwest = { default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
], version = "0.11.13" }
ron = "0.10.1"
serde = { features = [ "derive" ], version = "1.0.228" }
serde_json = "1.0.91"
tokio = { features = [ "rt-multi-thread" ], version = "1.48.0" }
