[package]
name    = "websearch"
version = "25.9.3"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
abi_stable    = "0.11.1"
anyrun-plugin = { path = "../../anyrun-plugin" }
ron           = "0.8.0"
serde         = { features = [ "derive" ], version = "1.0.152" }
strum         = "0.25.0"
strum_macros  = "0.25.1"
urlencoding   = "2.1.3"
